增加分享对话框

--- a/app/src/main/res/layout/adapter_video_complete.xml
+++ b/app/src/main/res/layout/adapter_video_complete.xml
@@ -5,7 +5,8 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="10dp"
     android:layout_marginRight="10dp"
-    android:layout_marginTop="10dp"
+    android:layout_marginBottom="5dp"
+    android:layout_marginTop="5dp"
     android:foreground="@drawable/sel_common_bg_press">
 
     <LinearLayout
