--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -68,7 +68,7 @@
             <TextView
                 android:id="@+id/btn_select_all"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/edit_layout_height"
                 android:layout_weight="1"
                 android:background="@drawable/sel_common_bg_press"
                 android:gravity="center"
@@ -83,7 +83,7 @@
             <TextView
                 android:id="@+id/btn_select_del"
                 android:layout_width="0dp"
-                android:layout_height="50dp"
+                android:layout_height="@dimen/edit_layout_height"
                 android:layout_weight="1"
                 android:background="@drawable/sel_common_bg_press"
                 android:gravity="center"
@@ -94,7 +94,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1px"
-            android:layout_marginBottom="50dp"
+            android:layout_marginBottom="@dimen/edit_layout_height"
             android:background="@color/background_gray"/>
     </FrameLayout>
 </android.support.design.widget.CoordinatorLayout>
