--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -24,4 +24,5 @@
     <color name="download_error">#fd4d51</color>
 
     <color name="item_pressed">#33626262</color>
+    <color name="snackbar_bg">#ccf57c00</color>
 </resources>
