--- a/app/src/main/res/layout/activity_video_player.xml
+++ b/app/src/main/res/layout/activity_video_player.xml
@@ -8,15 +8,15 @@
     android:orientation="vertical"
     tools:context="com.dl7.mvp.module.video.player.VideoPlayerActivity">
 
-    <!--<include layout="@layout/layout_toolbar"/>-->
+    <include layout="@layout/layout_toolbar"/>
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="?attr/colorPrimary"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>
+    <!--<android.support.v7.widget.Toolbar-->
+        <!--android:id="@+id/toolbar"-->
+        <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="?attr/actionBarSize"-->
+        <!--android:background="?attr/colorPrimary"-->
+        <!--app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>-->
 
     <com.dl7.player.media.IjkPlayerView
         android:id="@+id/video_player"
