--- a/app/src/main/res/layout/activity_news_detail.xml
+++ b/app/src/main/res/layout/activity_news_detail.xml
@@ -38,7 +38,7 @@
         <include layout="@layout/layout_news_content"/>
     </android.support.v4.widget.NestedScrollView>
 
-    <com.dl7.mvp.views.EmptyLayout
+    <com.dl7.mvp.widget.EmptyLayout
         android:id="@+id/empty_layout"
         android:layout_marginTop="@dimen/tab_bar_margin_top"
         android:layout_width="match_parent"
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        app:layout_behavior="com.dl7.mvp.views.behavior.ScrollAwareFABBehavior"
+        app:layout_behavior="com.dl7.mvp.widget.behavior.ScrollAwareFABBehavior"
         android:src="@mipmap/ic_arrow_upward"
         android:layout_margin="16dp"/>
 </android.support.design.widget.CoordinatorLayout>
