修改新闻详情界面

--- a/app/src/main/res/layout/layout_empty_loading.xml
+++ b/app/src/main/res/layout/layout_empty_loading.xml
@@ -2,43 +2,37 @@
 <FrameLayout android:id="@+id/empty_layout"
              xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             android:background="@android:color/white">
+             android:layout_height="match_parent">
 
-    <RelativeLayout
+    <FrameLayout
         android:id="@+id/rl_empty_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
-        android:visibility="gone">
-
-        <ImageView
-            android:id="@+id/iv_empty_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:src="@mipmap/ic_load"/>
+        android:visibility="visible">
 
         <TextView
-            android:id="@+id/tv_empty_message"
+            android:id="@+id/tv_net_error"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/iv_empty_icon"
-            android:layout_centerHorizontal="true"
+            android:drawableTop="@mipmap/ic_load"
+            android:drawablePadding="10dp"
+            android:layout_gravity="center"
             android:layout_marginTop="8dp"
             android:gravity="center"
-            android:text="@string/network_error"
+            android:textColor="@color/colorAccent"
+            android:text="网络异常，点击重试"
             android:textSize="16sp"/>
-    </RelativeLayout>
+    </FrameLayout>
 
     <com.github.ybq.android.spinkit.SpinKitView
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/empty_loading"
         android:visibility="gone"
         android:padding="20dp"
-        style="@style/SpinKitView.CubeGrid"
+        style="@style/SpinKitView.Circle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        app:SpinKit_Color="@color/colorPrimary" />
+        app:SpinKit_Color="@color/colorAccent" />
 </FrameLayout>
