--- a/app/src/main/res/layout/activity_news_article.xml
+++ b/app/src/main/res/layout/activity_news_article.xml
@@ -20,10 +20,25 @@
 
             <include layout="@layout/layout_toolbar_news_detail"/>
 
-            <com.dl7.mvp.widget.CustomWebView
-                android:id="@+id/web_view"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:padding="10dp">
+
+                <TextView
+                    android:id="@+id/tv_content"
+                    style="@style/news_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
+
+                <ViewStub
+                    android:id="@+id/vs_related_content"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout="@layout/layout_related_content"/>
+
+            </LinearLayout>
 
             <include layout="@layout/layout_pull_scrollview_foot"/>
         </LinearLayout>
@@ -45,6 +60,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:background="@drawable/sel_btn_press_bg"
+            android:paddingLeft="15dp"
+            android:paddingRight="15dp"
             android:src="@mipmap/ic_return_back"/>
 
         <TextView
