--- a/app/src/main/res/layout/adapter_news_list.xml
+++ b/app/src/main/res/layout/adapter_news_list.xml
@@ -14,7 +14,7 @@
         android:layout_width="@dimen/news_icon_width"
         android:layout_height="@dimen/news_icon_height"
         android:layout_margin="10dp"
-        android:scaleType="fitXY"
+        android:scaleType="centerCrop"
         android:src="@mipmap/icon_default_1"/>
 
     <com.flyco.labelview.LabelView
