--- a/app/src/main/res/layout/activity_big_photo.xml
+++ b/app/src/main/res/layout/activity_big_photo.xml
@@ -53,7 +53,7 @@
             android:layout_height="30dp"
             android:layout_weight="1"
             android:padding="5dp"
-            android:src="@mipmap/btn_share"/>
+            android:src="@mipmap/ic_btn_share"/>
     </LinearLayout>
 
     <include layout="@layout/layout_toolbar_transparent"/>
