--- a/app/src/main/res/drawable/sel_btn_photo_download.xml
+++ b/app/src/main/res/drawable/sel_btn_photo_download.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@mipmap/btn_downloaded" android:state_selected="true"/>
-    <item android:drawable="@mipmap/btn_download"/>
+    <item android:drawable="@mipmap/ic_photo_downloaded" android:state_selected="true"/>
+    <item android:drawable="@mipmap/ic_photo_download"/>
 </selector>
