--- a/app/src/main/res/layout/layout_empty_loading.xml
+++ b/app/src/main/res/layout/layout_empty_loading.xml
@@ -15,7 +15,7 @@
             android:id="@+id/tv_net_error"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:drawableTop="@mipmap/ic_load"
+            android:drawableTop="@mipmap/ic_not_network"
             android:drawablePadding="10dp"
             android:layout_gravity="center"
             android:layout_marginTop="8dp"
