修改专题界面

--- a/app/src/main/res/layout/activity_news_article.xml
+++ b/app/src/main/res/layout/activity_news_article.xml
@@ -70,7 +70,7 @@
             android:layout_height="match_parent"
             android:layout_marginRight="10dp"
             android:layout_weight="1"
-            android:gravity="center"
+            android:gravity="center_vertical"
             android:singleLine="true"
             android:textColor="@android:color/white"
             android:textSize="18sp"/>
