--- a/app/src/main/res/layout/activity_special.xml
+++ b/app/src/main/res/layout/activity_special.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".module.news.special.SpecialActivity">
 
     <!-- 遮挡状态栏透明的部分 -->
@@ -15,7 +15,8 @@
 
     <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/toolbar_margin_top">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_news_list"
@@ -24,8 +25,6 @@
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
-            xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
             android:layout_width="match_parent"
             android:layout_height="@dimen/toolbar_height"
             android:background="@android:color/transparent"
@@ -34,5 +33,13 @@
         <include layout="@layout/layout_common_empty"/>
     </FrameLayout>
 
-</LinearLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab_coping"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:src="@mipmap/ic_arrow_upward"
+        app:layout_behavior="com.dl7.mvp.widget.behavior.ScrollAwareFABBehavior"/>
+</android.support.design.widget.CoordinatorLayout>
 
