--- a/app/src/main/res/layout/activity_download.xml
+++ b/app/src/main/res/layout/activity_download.xml
@@ -1,106 +1,111 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.dl7.mvp.module.manage.download.DownloadActivity">
-
-    <android.support.design.widget.AppBarLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fitsSystemWindows="true"
-        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-
-        <android.support.v7.widget.Toolbar
-            android:id="@+id/tool_bar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:layout_scrollFlags="scroll|enterAlways|snap"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
-
-            <TextView
-                android:id="@+id/tv_close_edit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical|right"
-                android:layout_marginRight="5dp"
-                android:background="@drawable/sel_common_bg_press"
-                android:padding="10dp"
-                android:text="完成"
-                android:textColor="@android:color/white"
-                android:textSize="16sp"
-                android:visibility="gone"/>
-        </android.support.v7.widget.Toolbar>
-
-        <com.flyco.tablayout.SlidingTabLayout
-            android:id="@+id/tab_layout"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/tab_layout_height"
-            app:tl_indicator_color="@android:color/white"
-            app:tl_indicator_margin_left="30dp"
-            app:tl_indicator_margin_right="30dp"
-            app:tl_tab_space_equal="true"/>
-    </android.support.design.widget.AppBarLayout>
-
-    <com.dl7.mvp.widget.FlexibleViewPager
-        android:id="@+id/view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
-
-    <FrameLayout
-        android:id="@+id/fl_del_layout"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:visibility="gone">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@android:color/white"
-            android:orientation="horizontal"
-            android:visibility="visible">
-
-            <TextView
-                android:id="@+id/btn_select_all"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/edit_layout_height"
-                android:layout_weight="1"
-                android:background="@drawable/sel_common_bg_press"
-                android:gravity="center"
-                android:text="全选"
-                android:textColor="@android:color/black"/>
-
-            <View
-                android:layout_width="1px"
-                android:layout_height="match_parent"
-                android:background="@color/background_gray"/>
-
-            <TextView
-                android:id="@+id/btn_select_del"
-                android:layout_width="0dp"
-                android:layout_height="@dimen/edit_layout_height"
-                android:layout_weight="1"
-                android:background="@drawable/sel_common_bg_press"
-                android:gravity="center"
-                android:text="删除"
-                android:textColor="@drawable/sel_btn_download_del"/>
-        </LinearLayout>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_marginBottom="@dimen/edit_layout_height"
-            android:background="@color/background_gray"/>
-    </FrameLayout>
 
     <!-- 遮挡状态栏透明的部分 -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="@dimen/toolbar_margin_top"
         android:background="?attr/colorPrimary"/>
-</android.support.design.widget.CoordinatorLayout>
+
+    <android.support.design.widget.CoordinatorLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <android.support.design.widget.AppBarLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/tool_bar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:layout_scrollFlags="scroll|enterAlways|snap"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
+
+                <TextView
+                    android:id="@+id/tv_close_edit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical|right"
+                    android:layout_marginRight="5dp"
+                    android:background="@drawable/sel_common_bg_press"
+                    android:padding="10dp"
+                    android:text="完成"
+                    android:textColor="@android:color/white"
+                    android:textSize="16sp"
+                    android:visibility="gone"/>
+            </android.support.v7.widget.Toolbar>
+
+            <com.flyco.tablayout.SlidingTabLayout
+                android:id="@+id/tab_layout"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/tab_layout_height"
+                app:tl_indicator_color="@android:color/white"
+                app:tl_indicator_margin_left="30dp"
+                app:tl_indicator_margin_right="30dp"
+                app:tl_tab_space_equal="true"/>
+        </android.support.design.widget.AppBarLayout>
+
+        <com.dl7.mvp.widget.FlexibleViewPager
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
+
+        <FrameLayout
+            android:id="@+id/fl_del_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:visibility="gone">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/white"
+                android:orientation="horizontal"
+                android:visibility="visible">
+
+                <TextView
+                    android:id="@+id/btn_select_all"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/edit_layout_height"
+                    android:layout_weight="1"
+                    android:background="@drawable/sel_common_bg_press"
+                    android:gravity="center"
+                    android:text="全选"
+                    android:textColor="@android:color/black"/>
+
+                <View
+                    android:layout_width="1px"
+                    android:layout_height="match_parent"
+                    android:background="@color/background_gray"/>
+
+                <TextView
+                    android:id="@+id/btn_select_del"
+                    android:layout_width="0dp"
+                    android:layout_height="@dimen/edit_layout_height"
+                    android:layout_weight="1"
+                    android:background="@drawable/sel_common_bg_press"
+                    android:gravity="center"
+                    android:text="删除"
+                    android:textColor="@drawable/sel_btn_download_del"/>
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1px"
+                android:layout_marginBottom="@dimen/edit_layout_height"
+                android:background="@color/background_gray"/>
+        </FrameLayout>
+    </android.support.design.widget.CoordinatorLayout>
+</LinearLayout>
