--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,6 +29,9 @@
         <!--<item name="android:windowAnimationStyle">@style/slide_right_entry</item>-->
     </style>
 
+    <style name="AppBaseTheme.BigPhotoTheme">
+    </style>
+
     <style name="SplashTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- 用这张图这样会变形，不知是分辨率问题还是怎么着 -->
         <!--<item name="android:windowBackground">@mipmap/ic_github</item>-->
