--- a/app/src/main/res/anim/photo_entry.xml
+++ b/app/src/main/res/anim/photo_entry.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <alpha xmlns:android="http://schemas.android.com/apk/res/android"
-       android:duration="100"
+       android:duration="@android:integer/config_mediumAnimTime"
        android:fromAlpha="0.9"
        android:interpolator="@android:anim/accelerate_interpolator"
        android:toAlpha="1.0"/>
