将网络异常处理统一提取到BaseActivity和BaseFragment处理，简化调用接口

--- a/app/src/main/res/layout/fragment_news_list.xml
+++ b/app/src/main/res/layout/fragment_news_list.xml
@@ -11,6 +11,8 @@
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_news_list"
+            android:animationCache="false"
+            android:persistentDrawingCache="scrolling"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
